# CourseWorkOSaSP

./: CMakeLists.txt  browser.cpp  browser.h  browserwindow.cpp  browserwindow.h  downloadmanager.cpp  downloadmanager.h  downloadmanager.ui  downloadwidget.cpp  downloadwidget.h  downloadwidget.ui  main.cpp  tabwidget.cpp  tabwidget.h  webpage.cpp  webpage.h  webpopupwindow.h  webview.cpp  webview.h
assets/: index.html
